# mlem

./: LICENSE  README.md  pyproject.toml
src/mlem/: __init__.py  dataset.py  dectree.py  utils.py
tests/: test_dectree.py
tests/datasets/: tennis.csv
