[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlem-py"
version = "0.2.1"
authors = [{ name = "atzur" }]
description = "Pure Python machine learning library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydot"
]

[project.urls]
"homepage" = "https://github.com/atzuur/mlem"

[tool.setuptools.package-dir]
mlem = "src/mlem"
